[package]
name = "mcmodmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.10.0"
num = "0.4.1"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = "0.11.23"
serde = {version = "1.0.193", features = ["derive"]}
serde_arrays = "0.1.0"
serde_json = "1.0.108"
serial_test = "2.0.0"
tokio = { version = "1", features = ["fs"] }
