[package]
name = "mcmodmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
execute = "0.2.13"
iced = "0.10.0"
json = "0.12.4"
num = "0.4.1"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_arrays = "0.1.0"
serde_json = "1.0.108"
serial_test = "2.0.0"
tokio = { version = "1", features = ["full"] }
